--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,20 @@
-.page {
+.container {
   display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
-.header {
-  height: 60px;
-  padding: 8px 8px 8px 16px;
-  background: #00a5e4;
-  box-sizing: border-box;
-  font-size: 1.2em;
-  line-height: 44px;
-  color: white;
+.form-area {
+  width: 30%;
+  padding: 20px;
+  overflow-y: auto; /* For scrolling */
 }
 
-app-webviewer {
+.viewer {
   flex: 1;
-  margin: 8px;
-  -webkit-box-shadow: 1px 1px 10px #999;
-  box-shadow: 1px 1px 10px #999;
+  height: 100%;
 }
 
-.viewer { width: 100%; height: 100%; }
+.low-confidence {
+  background-color: red;
+}
